test-suite/bugs/closed/shouldsucceed/bug1912.v
Require Import ZArith.

Goal forall x, Zsucc (Zpred x) = x.
intros x.
omega.
Qed.
